<resources>
    <string name="app_name">DotaViewer-Android</string>
    <string name="title_profile">Profile</string>
    <string name="title_pro_games">Pro games</string>
    <string name="title_settings">Settings</string>

    <string name="stats_view_icon_description">User\'s avatar</string>
    <string name="stats_view_name_default">⠀⠀⠀⠀⠀⠀⠀⠀⠀</string>
    <string name="stats_view_rank_default">⠀⠀⠀⠀⠀⠀⠀⠀⠀</string>
    <string name="stats_view_time_default">⠀⠀⠀⠀⠀⠀⠀⠀⠀</string>
    <string name="stats_view_winrate_default">⠀⠀⠀⠀⠀⠀⠀⠀⠀</string>
    <string name="stats_view_kda_default">⠀⠀⠀⠀⠀⠀⠀⠀⠀</string>

    <string name="error_text_empty_data">Error in server response. Empty data.</string>

    <string name="sign_in_hint_email">E-mail</string>
    <string name="sign_in_hint_password">Password</string>
    <string name="sign_in_hint_steam_id">Steam ID</string>

    <string name="content_description_edit_text_field">Edit text field</string>
    <string name="content_description_edit_text_field_icon">Edit text field icon</string>
</resources>
